# libvits-ncnn

./: .gitmodules  CMakeLists.txt
demo/: CMakeLists.txt  utils.hpp  vitsdemo.cpp  vitsncnn.hpp
openjtalk/mecab/: config.h  mmap.h
